Made html elements non-selectable and non-draggable

--- a/resources/styles/WebHost.css
+++ b/resources/styles/WebHost.css
@@ -16,3 +16,11 @@ body {
     left: 20px;
     bottom: 20px;
 }
+
+* {
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -webkit-user-drag: none;
+    -ms-user-select: none;
+    user-select: none;
+}
